--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,8 +22,8 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          docker build -t hellorepo:latest .
-          docker push hellorepo:latest
+          docker build -t 153046341652.dkr.ecr.us-east-1.amazonaws.com/hellorepo
+          docker push 153046341652.dkr.ecr.us-east-1.amazonaws.com/hellorepo
 
       - name: Update ECS service
         run: |
