--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -5,13 +5,13 @@ on:
     branches: [ "main" ]
 
 env:
-  AWS_REGION: us-east-1                   # set this to your preferred AWS region, e.g. us-west-1
+  AWS_REGION: us-east-2                   # set this to your preferred AWS region, e.g. us-west-1
   ECR_REPOSITORY: hellorepo           # set this to your Amazon ECR repository name
   ECS_SERVICE: hellosevice                 # set this to your Amazon ECS service name
   ECS_CLUSTER: helloclus                 # set this to your Amazon ECS cluster name
-  ECS_TASK_DEFINITION: ecs-task-definition.json # set this to the path to your Amazon ECS task definition
+  ECS_TASK_DEFINITION: task-definition.json # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
-  CONTAINER_NAME: container1           # set this to the name of the container in the
+  CONTAINER_NAME: hellocontainer           # set this to the name of the container in the
                                                # containerDefinitions section of your task definition
 
 
@@ -29,7 +29,7 @@ jobs:
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: us-east-1
+        aws-region: us-east-2
 
     - name: Login to Amazon ECR
       id: login-ecr
@@ -53,7 +53,7 @@ jobs:
       uses: aws-actions/amazon-ecs-render-task-definition@v1
       with:
         task-definition: task-definition.json
-        container-name: container1
+        container-name: hellocontainer
         image: ${{ steps.build-image.outputs.image }}
 
     - name: Deploy Amazon ECS task definition
@@ -61,5 +61,5 @@ jobs:
       with:
         task-definition: ${{ steps.task-def.outputs.task-definition }}
         service: helloservice
-        cluster: helloclus
+        cluster: hellocluster
         wait-for-service-stability: true
