--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -6,7 +6,7 @@ on:
 
 env:
   AWS_REGION: us-east-2                   # set this to your preferred AWS region, e.g. us-west-1
-  ECR_REPOSITORY: hellorepo           # set this to your Amazon ECR repository name
+  ECR_REPOSITORY: hellorepository           # set this to your Amazon ECR repository name
   ECS_SERVICE: hellosevice                 # set this to your Amazon ECS service name
   ECS_CLUSTER: helloclus                 # set this to your Amazon ECS cluster name
   ECS_TASK_DEFINITION: task-definition.json # set this to the path to your Amazon ECS task definition
