--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -7,7 +7,7 @@ on:
 env:
   AWS_REGION: us-east-2                   # set this to your preferred AWS region, e.g. us-west-1
   ECR_REPOSITORY: hellorepository           # set this to your Amazon ECR repository name
-  ECS_SERVICE: hellosevice                 # set this to your Amazon ECS service name
+  ECS_SERVICE: servicecluster                 # set this to your Amazon ECS service name
   ECS_CLUSTER: helloclus                 # set this to your Amazon ECS cluster name
   ECS_TASK_DEFINITION: task-definition.json # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
@@ -60,6 +60,6 @@ jobs:
       uses: aws-actions/amazon-ecs-deploy-task-definition@v1
       with:
         task-definition: ${{ steps.task-def.outputs.task-definition }}
-        service: helloservice
+        service: servicecluster
         cluster: hellocluster
         wait-for-service-stability: true
