--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -7,8 +7,8 @@ on:
 env:
   AWS_REGION: us-east-2                   # set this to your preferred AWS region, e.g. us-west-1
   ECR_REPOSITORY: hellorepository           # set this to your Amazon ECR repository name
-  ECS_SERVICE: servicecluster                 # set this to your Amazon ECS service name
-  ECS_CLUSTER: helloclus                 # set this to your Amazon ECS cluster name
+  ECS_SERVICE: hellojavaservice                 # set this to your Amazon ECS service name
+  ECS_CLUSTER: hellojavaclus                 # set this to your Amazon ECS cluster name
   ECS_TASK_DEFINITION: task-definition.json # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
   CONTAINER_NAME: hellocontainer           # set this to the name of the container in the
@@ -60,6 +60,6 @@ jobs:
       uses: aws-actions/amazon-ecs-deploy-task-definition@v1
       with:
         task-definition: ${{ steps.task-def.outputs.task-definition }}
-        service: servicecluster
-        cluster: hellocluster
+        service: hellojavaservice
+        cluster: hellojavaclus
         wait-for-service-stability: true
