--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -9,7 +9,7 @@ env:
   ECR_REPOSITORY: hellorepo1           # set this to your Amazon ECR repository name
   ECS_SERVICE: helloservice1                 # set this to your Amazon ECS service name
   ECS_CLUSTER: helloclus1                 # set this to your Amazon ECS cluster name
-  ECS_TASK_DEFINITION: task-definition.json # set this to the path to your Amazon ECS task definition
+  ECS_TASK_DEFINITION: .aws/task-definition.json # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
   CONTAINER_NAME: hellocontainer           # set this to the name of the container in the
                                                # containerDefinitions section of your task definition
@@ -52,7 +52,7 @@ jobs:
       id: task-def
       uses: aws-actions/amazon-ecs-render-task-definition@v1
       with:
-        task-definition: task-definition.json
+        task-definition: .aws/task-definition.json
         container-name: hellocontainer
         image: ${{ steps.build-image.outputs.image }}
 
