--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -58,6 +58,7 @@ jobs:
 
     - name: Deploy Amazon ECS task definition
       uses: aws-actions/amazon-ecs-deploy-task-definition@v1
+            --deployment-configuration "deploymentCircuitBreaker={enable=true,rollback=false}"
       with:
         task-definition: ${{ steps.task-def.outputs.task-definition }}
         service: ecsservice
