--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -6,12 +6,12 @@ on:
 
 env:
   AWS_REGION: us-west-1                   # set this to your preferred AWS region, e.g. us-west-1
-  ECR_REPOSITORY: ecr-repository           # set this to your Amazon ECR repository name
-  ECS_SERVICE: ecsservice                 # set this to your Amazon ECS service name
-  ECS_CLUSTER: dev-cluster                 # set this to your Amazon ECS cluster name
-  ECS_TASK_DEFINITION: .aws/task-definition.json # set this to the path to your Amazon ECS task definition
+  ECR_REPOSITORY: repo1           # set this to your Amazon ECR repository name
+  ECS_SERVICE: reposervice                 # set this to your Amazon ECS service name
+  ECS_CLUSTER: repoclus                 # set this to your Amazon ECS cluster name
+  ECS_TASK_DEFINITION: task-definition.json # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
-  CONTAINER_NAME: ecs-container           # set this to the name of the container in the
+  CONTAINER_NAME: repocontainer           # set this to the name of the container in the
                                                # containerDefinitions section of your task definition
 
 
@@ -52,8 +52,8 @@ jobs:
       id: task-def
       uses: aws-actions/amazon-ecs-render-task-definition@v1
       with:
-        task-definition: .aws/task-definition.json
-        container-name: ecs-container
+        task-definition: task-definition.json
+        container-name: repocontainer
         image: ${{ steps.build-image.outputs.image }}
 
     - name: Deploy Amazon ECS task definition
@@ -61,7 +61,6 @@ jobs:
            
       with:
         task-definition: ${{ steps.task-def.outputs.task-definition }}
-        service: ecsservice
-        cluster: dev-cluster
-         --deployment-configuration "deploymentCircuitBreaker={enable=true,rollback=false}"
+        service: reposervice
+        cluster: repoclus
         wait-for-service-stability: true
