--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -22,9 +22,9 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          docker build -t your-image-name .
+          docker build -t myimg .
           docker tag your-image-name:latest your-ecr-repository-uri:latest
-          docker push your-ecr-repository-uri:latest
+          docker push ecsrepo
 
       - name: Update ECS service
         run: |
